--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <header class="sticky-header">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
-                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M50 15 C35 15 25 25 25 40 C25 55 35 65 50 75 C65 65 75 55 75 40 C75 25 65 15 50 15 Z M30 75 C20 75 15 80 15 85 C15 92 22 95 30 95 C38 95 45 92 45 85 C45 80 40 75 30 75 Z M70 75 C60 75 55 80 55 85 C55 92 62 95 70 95 C78 95 85 92 85 85 C85 80 80 75 70 75 Z' fill='%23000000' stroke='%23000000' stroke-width='4' /%3E%3C/svg%3E" alt="32 Whites Logo" class="w-12 h-12 md:w-14 md:h-14">
+                <img src="logo.png" alt="32 Whites Logo" class="w-12 h-12 md:w-14 md:h-14">
                 <div>
                     <h1 class="text-sm md:text-base font-bold gradient-text whitespace-nowrap" style="font-family: 'Manrope', sans-serif;">32 Whites Multispecialty Dental Clinic</h1>
                 </div>
@@ -142,16 +142,7 @@
         </div>
         
         <!-- Right Side - Clinic Photo -->
-        <div class="hero-image-section" style="background-image: url('https://i.imgur.com/placeholder.jpg'); background-size: cover; background-position: center;">
-            <!-- Note: After deployment, upload the clinic exterior photo to GitHub images folder and update this URL -->
-            <!-- Temporary placeholder - will be replaced with actual clinic photo -->
-            <div class="absolute inset-0 flex items-center justify-center bg-gray-100">
-                <div class="text-center p-8">
-                    <div class="text-6xl mb-4">🏥</div>
-                    <p class="text-gray-600 font-semibold">Your Clinic Photo<br>Will Appear Here</p>
-                    <p class="text-sm text-gray-500 mt-2">Upload to GitHub after deployment</p>
-                </div>
-            </div>
+        <div class="hero-image-section" style="background-image: url('hero.jpg');">
         </div>
     </section>
 
