--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
     <!-- Header -->
     <header class="sticky-header">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <div class="flex items-center space-x-3">
-                <img src="logo.png" alt="32 Whites Logo" class="w-12 h-12 md:w-14 md:h-14">
-                <div>
-                    <h1 class="text-sm md:text-base font-bold gradient-text whitespace-nowrap" style="font-family: 'Manrope', sans-serif;">32 Whites Multispecialty Dental Clinic</h1>
+            <div class="flex items-center space-x-4 md:space-x-6 flex-1 max-w-[50%]">
+                <img src="logo.png" alt="32 Whites Logo" class="w-14 h-14 md:w-16 md:h-16 flex-shrink-0">
+                <div class="flex-1">
+                    <h1 class="text-base md:text-xl lg:text-2xl font-bold gradient-text leading-tight" style="font-family: 'Manrope', sans-serif;">32 Whites Multispecialty Dental Clinic</h1>
                 </div>
             </div>
-            <button onclick="openModal()" class="btn-primary text-sm md:text-base whitespace-nowrap">
+            <button onclick="openModal()" class="btn-primary text-sm md:text-base whitespace-nowrap ml-4">
                 Book Appointment
             </button>
         </div>
@@ -127,15 +127,19 @@
                 <div class="mt-12 flex flex-wrap justify-center items-center gap-6 text-sm text-gray-600">
                     <div class="flex items-center gap-2">
                         <span class="text-2xl">⭐</span>
-                        <span><strong>4.8</strong> Rating</span>
+                        <span><strong>5.0</strong> Rating</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <span class="text-2xl">✅</span>
+                        <span><strong>600+</strong> Verified Reviews</span>
                     </div>
                     <div class="flex items-center gap-2">
                         <span class="text-2xl">👥</span>
-                        <span><strong>500+</strong> Happy Patients</span>
+                        <span><strong>7000+</strong> Happy Patients</span>
                     </div>
                     <div class="flex items-center gap-2">
                         <span class="text-2xl">🏥</span>
-                        <span><strong>10+</strong> Years Experience</span>
+                        <span><strong>9+</strong> Years Experience</span>
                     </div>
                 </div>
             </div>
@@ -565,7 +569,7 @@
                         </h3>
                         <p class="text-gray-700">
                             <a href="tel:+917385905319" class="gradient-text hover:underline font-semibold text-lg">+91 7385905319</a><br>
-                            <a href="mailto:32whitesdentalc@gmail.com" class="gradient-text hover:underline">32whitesdentalc@gmail.com</a>
+                            <a href="mailto:bhaktighanwat95@gmail.com" class="gradient-text hover:underline">bhaktighanwat95@gmail.com</a>
                         </p>
                     </div>
                     <div>
@@ -661,19 +665,31 @@
 
         // Blog navigation
         function showBlog(blogId) {
+            // Hide main content sections
+            document.querySelectorAll('section:not([id^="blog-"])').forEach(section => {
+                section.style.display = 'none';
+            });
             // Hide all blogs first
             document.querySelectorAll('[id^="blog-"]').forEach(blog => {
                 blog.classList.add('hidden');
             });
             // Show selected blog
-            document.getElementById(blogId).classList.remove('hidden');
-            // Scroll to top
-            window.scrollTo(0, 0);
+            const selectedBlog = document.getElementById(blogId);
+            selectedBlog.classList.remove('hidden');
+            selectedBlog.style.display = 'block';
+            // Scroll to top smoothly
+            window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
         function hideBlog(blogId) {
+            // Hide the blog
             document.getElementById(blogId).classList.add('hidden');
-            window.scrollTo(0, 0);
+            // Show all main content sections again
+            document.querySelectorAll('section:not([id^="blog-"])').forEach(section => {
+                section.style.display = 'block';
+            });
+            // Scroll to top
+            window.scrollTo({ top: 0, behavior: 'smooth' });
         }
     </script>
 </body>
